# interpro-matches-api

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.embl-ebi  README.md  pyproject.toml
.github/workflows/: ci.yml
src/matchesapi/: __init__.py  examples.py  main.py  models.py  test_main.py
