[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interpro-matches-api"
version = "0.5.0"
authors = [
    { name="Matthias Blum", email="mblum@ebi.ac.uk" },
    { name="Alessandro Polignano", email="polignan@ebi.ac.uk" },
]
description = "InterPro Matches API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]~=0.124",
    "pydantic>=2.11,<3",
    "rocksdict~=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matchesapi"]
